--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,9 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.8'
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Cache pip
