--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "prettier": "^2.7.0",
     "tailwindcss": "^3.0.23",
     "vite": "^4.3.5",
-    "vite-plugin-eslint": "^1.8.1"
+    "vite-plugin-eslint": "^1.8.1",
+    "vitest": "^0.34.1"
   },
   "scripts": {
     "start": "vite",
