--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "jsdom": "^22.1.0",
     "postcss": "^8.4.6",
     "postcss-import": "^15.1.0",
     "prettier": "^2.7.0",
@@ -52,7 +53,8 @@
     "build": "vite build",
     "serve": "vite preview",
     "format": "prettier --write .",
-    "lint": "eslint . --ext .js,.jsx"
+    "lint": "eslint . --ext .js,.jsx",
+    "test": "vitest"
   },
   "browserslist": {
     "production": [
