--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "postcss-import": "^15.1.0",
     "prettier": "^2.7.0",
     "tailwindcss": "^3.0.23",
+    "terser": "^5.19.4",
     "vite": "^4.3.5",
     "vite-plugin-eslint": "^1.8.1"
   },
