--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-router-dom": "^5.2.0",
     "react-select": "^4.3.1",
     "remark-sectionize": "^1.1.1",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "terser": "^5.19.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -43,7 +44,6 @@
     "postcss-import": "^15.1.0",
     "prettier": "^2.7.0",
     "tailwindcss": "^3.0.23",
-    "terser": "^5.19.4",
     "vite": "^4.3.5",
     "vite-plugin-eslint": "^1.8.1"
   },
