--- a/pytest.ini
+++ b/pytest.ini
@@ -2,4 +2,4 @@
 DJANGO_SETTINGS_MODULE=config.settings.test
 norecursedirs = node_modules .* build *.eggb venv
 addopts = --cov=dear_petition --cov-report=html --cov-report=term
-testpaths = dear_petition/petition
+testpaths = dear_petition/
