--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,15 @@
 repos:
--   repo: https://github.com/python/black
-    rev: 22.3.0
+-   repo: https://github.com/adamchainz/django-upgrade
+    rev: "1.15.0"  # replace with latest tag on GitHub
     hooks:
-    - id: black
-      language_version: python3
--   repo: https://github.com/pre-commit/mirrors-prettier
-    rev: "" # Use the sha or tag you want to point at
-    hooks:
-    - id: prettier
+    -   id: django-upgrade
+        args: [--target-version, "4.2"]   # Replace with Django version
+# -   repo: https://github.com/python/black
+#     rev: 22.3.0
+#     hooks:
+#     - id: black
+#       language_version: python3
+# -   repo: https://github.com/pre-commit/mirrors-prettier
+#     rev: "" # Use the sha or tag you want to point at
+#     hooks:
+#     - id: prettier
