--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "react-router-dom": "^5.2.0",
     "react-select": "^4.3.1",
     "remark-sectionize": "^1.1.1",
-    "styled-components": "^5.3.0",
-    "terser": "^5.19.4"
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
