--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,15 +1,16 @@
 repos:
--   repo: https://github.com/adamchainz/django-upgrade
-    rev: "1.15.0"
-    hooks:
-    -   id: django-upgrade
-        args: [--target-version, "4.2"]
-# -   repo: https://github.com/python/black
-#     rev: 22.3.0
-#     hooks:
-#     - id: black
-#       language_version: python3
--   repo: https://github.com/pre-commit/mirrors-prettier
-    rev: "v3.1.0"
-    hooks:
-    - id: prettier
+    - repo: https://github.com/adamchainz/django-upgrade
+      rev: "1.15.0"
+      hooks:
+          - id: django-upgrade
+            args: [--target-version, "4.2"]
+    # -   repo: https://github.com/python/black
+    #     rev: 22.3.0
+    #     hooks:
+    #     - id: black
+    #       language_version: python3
+    - repo: https://github.com/pre-commit/mirrors-prettier
+      rev: "v3.1.0"
+      hooks:
+          - id: prettier
+            args: [--config=./.prettierrc]
