--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,11 +4,12 @@ repos:
       hooks:
           - id: django-upgrade
             args: [--target-version, "4.2"]
-    # -   repo: https://github.com/python/black
-    #     rev: 22.3.0
-    #     hooks:
-    #     - id: black
-    #       language_version: python3
+    - repo: https://github.com/python/black
+      rev: "23.12.1"
+      hooks:
+          - id: black
+            language_version: python3.12
+            args: [--config=./pyproject.toml]
     - repo: https://github.com/pre-commit/mirrors-prettier
       rev: "v3.1.0"
       hooks:
