--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "react-router-dom": "^5.2.0",
     "react-select": "^4.3.1",
     "remark-sectionize": "^1.1.1",
-    "styled-components": "^5.3.0",
-    "terser": "^5.19.4"
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -44,7 +43,7 @@
     "jsdom": "^22.1.0",
     "postcss": "^8.4.6",
     "postcss-import": "^15.1.0",
-    "prettier": "^2.7.0",
+    "prettier": "^3.1.0",
     "tailwindcss": "^3.0.23",
     "vite": "^4.3.5",
     "vite-plugin-eslint": "^1.8.1",
