--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,6 +40,7 @@
   ],
   "rules": {
     // Disabled default rules
+    "no-debugger": "off",
     "no-plusplus": "off",
     "no-continue": "off",
     "react/jsx-props-no-spreading": "off",
