--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@popperjs/core": "^2.11.2",
     "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.21.2",
+    "bookmarklet": "file:./bookmarklet",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "file-saver": "^2.0.5",
