--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   },
   "scripts": {
     "start": "vite",
-    "build": "DISABLE_ESLINT_PLUGIN=true vite build",
+    "build": "vite build",
     "serve": "vite preview",
     "format": "prettier --write .",
     "lint": "eslint . --ext .js,.jsx",
