Update react 17 to react 19 (#528)
* Update react 17 to react 19

Various packages needed to also be updated for peer dependency
compatability. Special circumstances:

* @testing-library/react-hooks was moved into @testing-library/react
* react-popper was deprecated in favor of @floating-ui/react

* Fix CI - lint and test

* Fix css of tab panel

* Update framer-motion for react 18/19

--- a/package.json
+++ b/package.json
@@ -3,36 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@code-with-durham/bookmarklet": "0.1.0",
+    "@floating-ui/react": "^0.27.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "@headlessui/react": "^1.5.0",
-    "@popperjs/core": "^2.11.2",
-    "@reduxjs/toolkit": "^1.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^2.2.0",
+    "@reduxjs/toolkit": "^2.5.0",
     "axios": "^0.21.2",
-    "@code-with-durham/bookmarklet": "0.1.0",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "file-saver": "^2.0.5",
-    "framer-motion": "^4.1.17",
+    "framer-motion": "^12.4.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.2",
+    "react": "^19.0.0",
     "react-autosuggest": "^10.1.0",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "^7.17.2",
-    "react-markdown": "^6.0.2",
-    "react-popper": "^2.2.5",
-    "react-redux": "^7.2.4",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.0",
+    "react-markdown": "^9.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^5.2.0",
-    "react-select": "^4.3.1",
+    "react-select": "^5.10.0",
     "remark-sectionize": "^1.1.1",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.1.5",
-    "@testing-library/react-hooks": "^8.0.1",
-    "@types/file-saver": "^2.0.5",
+    "@testing-library/jest-dom": "^6.6.0",
+    "@testing-library/react": "^16.2.0",
     "@vitejs/plugin-react": "^4.0.4",
     "autoprefixer": "^10.4.2",
     "eslint": "^8.16.0",
