--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "@sentry/react": "^10.20.0",
     "axios": "^0.21.2",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
